@@ -27,9 +27,11 @@ alloc.o:\
 	./cc-compile alloc.c
 array.a:\
 	cc-slib array.sld array.o array_bytes.o array_cat.o array_chop.o \
-	array_copy.o array_index.o array_size.o array_trunc.o array_zero.o 
+	array_copy.o array_data.o array_index.o array_size.o array_trunc.o \
+	array_zero.o 
 	./cc-slib array array.o array_bytes.o array_cat.o array_chop.o \
-	array_copy.o array_index.o array_size.o array_trunc.o array_zero.o 
+	array_copy.o array_data.o array_index.o array_size.o array_trunc.o \
+	array_zero.o 
 array.o:\
 	cc-compile array.c alloc.h array.h 
 	./cc-compile array.c
@@ -349,10 +351,10 @@ fmt.a:\
 	fmt_ullongx.o fmt_ulong.o fmt_ulongb.o fmt_ulongo.o fmt_ulongx.o \
 	fmt_ushort.o fmt_ushortb.o fmt_ushorto.o fmt_ushortx.o 
 fmt_double.o:\
-	cc-compile fmt_double.c fmt.h 
+	cc-compile fmt_double.c sd_math.h sd_inline.h fmt.h 
 	./cc-compile fmt_double.c
 fmt_float.o:\
-	cc-compile fmt_float.c fmt.h 
+	cc-compile fmt_float.c fmt.h sd_math.h sd_inline.h 
 	./cc-compile fmt_float.c
 fmt_nstr.o:\
 	cc-compile fmt_nstr.c fmt.h 
@@ -716,13 +718,13 @@ scan_double.o:\
 	cc-compile scan_double.c scan.h 
 	./cc-compile scan_double.c
 scan_f32.o:\
-	cc-compile scan_f32.c scan_fspec.h 
+	cc-compile scan_f32.c scan_fspec.h sd_math.h 
 	./cc-compile scan_f32.c
 scan_f64.o:\
 	cc-compile scan_f64.c scan_fspec.h 
 	./cc-compile scan_f64.c
 scan_float.o:\
-	cc-compile scan_float.c scan.h 
+	cc-compile scan_float.c sd_math.h scan.h 
 	./cc-compile scan_float.c
 scan_fspec.a:\
 	cc-slib scan_fspec.sld scan_f32.o scan_f64.o 
@@ -1039,63 +1041,64 @@ clean: sysdeps_clean tests_clean
 	bin_chr.o bin_copy.o bin_copyr.o bin_count.o bin_diff.o bin_rchar.o \
 	bin_rchr.o bin_set.o bin_tolower.o bin_toupper.o bin_zero.o buffer.a \
 	buffer0.o buffer1.o buffer2.o buffer_copy.o buffer_get.o \
-	buffer_init.o buffer_put.o closeonexec.a closeonexec.o corelib-conf \
-	corelib-conf.o ctxt/bindir.c ctxt/bindir.o ctxt/ctxt.a \
-	ctxt/dlibdir.c ctxt/dlibdir.o ctxt/incdir.c ctxt/incdir.o \
-	ctxt/repos.c ctxt/repos.o ctxt/slibdir.c ctxt/slibdir.o \
-	ctxt/version.c ctxt/version.o deinstaller deinstaller.o dir_array.a \
-	dir_array.o dir_hash.a dir_hash.o dir_name.a dir_name.o dstring.a \
-	dstring_0.o dstring_cat.o 
-	rm -f dstring_cat0.o dstring_catb.o dstring_cats.o dstring_chop.o \
-	dstring_copy.o dstring_cpyb.o dstring_cpys.o dstring_init.o \
-	dstring_trunc.o env.a env.o env_get.o error.a error.o error_str.o \
-	fd.a fd_dup.o fd_move.o fd_reset.o fd_seek.a fd_seek_cur.o \
-	fd_seek_end.o fd_seek_pos.o fd_seek_start.o float32.a float32_pack.o \
-	float32_upack.o float64.a float64_pack.o float64_upack.o fmt.a \
-	fmt_double.o fmt_float.o fmt_nstr.o fmt_spec.a fmt_str.o fmt_u32.o \
-	fmt_u32b.o fmt_u32o.o fmt_u32x.o fmt_u64.o fmt_u64b.o fmt_u64o.o \
-	fmt_u64x.o fmt_uchar.o fmt_ucharb.o fmt_ucharo.o fmt_ucharx.o \
-	fmt_uint.o fmt_uintb.o fmt_uinto.o fmt_uintx.o fmt_ullong.o \
-	fmt_ullongo.o fmt_ullongx.o fmt_ulong.o fmt_ulongb.o fmt_ulongo.o \
-	fmt_ulongx.o fmt_ushort.o fmt_ushortb.o fmt_ushorto.o fmt_ushortx.o \
-	get_opt.a 
-	rm -f get_opt.o hashtable.a ht_addb.o ht_adds.o ht_bytes.o \
-	ht_deleteb.o ht_deletes.o ht_free.o ht_getb.o ht_gets.o ht_hash.o \
-	ht_init.o ht_replaceb.o ht_replaces.o iarray.a iarray_bytes.o \
-	iarray_cat.o iarray_chop.o iarray_copy.o iarray_free.o \
-	iarray_index.o iarray_init.o iarray_insert.o iarray_node.o \
-	iarray_remove.o iarray_size.o iarray_sort.o iarray_trunc.o \
-	iarray_zero.o inst-check inst-check.o inst-copy inst-copy.o inst-dir \
-	inst-dir.o inst-link inst-link.o install_core.o install_error.o \
-	installer installer.o instchk instchk.o insthier.o int16.a \
-	int16_pack.o int16_unpack.o int32.a int32_pack.o int32_unpack.o \
-	int64.a int64_pack.o int64_unpack.o nonblock.a nonblock.o open.a \
-	open_append.o open_creat.o open_excl.o open_ro.o open_rw.o \
-	open_trunc.o open_wo.o sarray.a 
-	rm -f sarray_bytes.o sarray_cat.o sarray_chop.o sarray_data.o \
-	sarray_index.o sarray_init.o sarray_size.o sarray_trunc.o scan.a \
-	scan_charset.o scan_double.o scan_f32.o scan_f64.o scan_float.o \
-	scan_fspec.a scan_ncharset.o scan_newline.o scan_space.o scan_spec.a \
-	scan_u32.o scan_u32o.o scan_u32x.o scan_u64.o scan_u64o.o \
-	scan_u64x.o scan_uchar.o scan_ucharb.o scan_ucharo.o scan_ucharx.o \
-	scan_uint.o scan_uintb.o scan_uinto.o scan_uintx.o scan_ullong.o \
-	scan_ullongb.o scan_ullongo.o scan_ullongx.o scan_ulong.o \
-	scan_ulongb.o scan_ulongo.o scan_ulongx.o scan_ushort.o \
-	scan_ushortb.o scan_ushorto.o scan_ushortx.o sgetline.a sgetline.o \
-	sgetline_chop.o sgetline_get.o sig.a sig.o sig_block.o sig_catch.o \
-	sig_pause.o squeue.a squeue_bytes.o squeue_data.o squeue_deq.o \
-	squeue_enq.o squeue_init.o squeue_peek.o squeue_size.o sstack.a \
-	sstack_bytes.o 
-	rm -f sstack_data.o sstack_init.o sstack_peek.o sstack_pop.o \
-	sstack_push.o sstack_size.o sstring.a sstring_0.o sstring_cat.o \
-	sstring_catb.o sstring_cats.o sstring_chop.o sstring_copy.o \
-	sstring_cpyb.o sstring_cpys.o sstring_init.o stalloc.a stalloc.o \
-	str.a str_char.o str_chr.o str_ci_diff.o str_ci_ndiff.o str_diff.o \
-	str_dup.o str_ends.o str_len.o str_ndiff.o str_rchar.o str_rchr.o \
-	str_starts.o str_tolower.o str_toupper.o syserr.a syserr_die.o \
-	syserr_init.o uint.a uint16.a uint16_pack.o uint16_unpack.o uint32.a \
-	uint32_pack.o uint32_unpack.o uint64.a uint64_pack.o uint64_unpack.o \
-	uint_pack.o uint_unpack.o 
+	buffer_init.o buffer_put.o closeonexec.a closeonexec.o conf-cctype \
+	conf-systype corelib-conf corelib-conf.o ctxt/bindir.c ctxt/bindir.o \
+	ctxt/ctxt.a ctxt/dlibdir.c ctxt/dlibdir.o ctxt/incdir.c \
+	ctxt/incdir.o ctxt/repos.c ctxt/repos.o ctxt/slibdir.c \
+	ctxt/slibdir.o ctxt/version.c ctxt/version.o deinstaller \
+	deinstaller.o dir_array.a dir_array.o dir_hash.a dir_hash.o \
+	dir_name.a dir_name.o dstring.a 
+	rm -f dstring_0.o dstring_cat.o dstring_cat0.o dstring_catb.o \
+	dstring_cats.o dstring_chop.o dstring_copy.o dstring_cpyb.o \
+	dstring_cpys.o dstring_init.o dstring_trunc.o env.a env.o env_get.o \
+	error.a error.o error_str.o fd.a fd_dup.o fd_move.o fd_reset.o \
+	fd_seek.a fd_seek_cur.o fd_seek_end.o fd_seek_pos.o fd_seek_start.o \
+	float32.a float32_pack.o float32_upack.o float64.a float64_pack.o \
+	float64_upack.o fmt.a fmt_double.o fmt_float.o fmt_nstr.o fmt_spec.a \
+	fmt_str.o fmt_u32.o fmt_u32b.o fmt_u32o.o fmt_u32x.o fmt_u64.o \
+	fmt_u64b.o fmt_u64o.o fmt_u64x.o fmt_uchar.o fmt_ucharb.o \
+	fmt_ucharo.o fmt_ucharx.o fmt_uint.o fmt_uintb.o fmt_uinto.o \
+	fmt_uintx.o fmt_ullong.o fmt_ullongo.o fmt_ullongx.o fmt_ulong.o \
+	fmt_ulongb.o fmt_ulongo.o fmt_ulongx.o fmt_ushort.o fmt_ushortb.o \
+	fmt_ushorto.o 
+	rm -f fmt_ushortx.o get_opt.a get_opt.o hashtable.a ht_addb.o \
+	ht_adds.o ht_bytes.o ht_deleteb.o ht_deletes.o ht_free.o ht_getb.o \
+	ht_gets.o ht_hash.o ht_init.o ht_replaceb.o ht_replaces.o iarray.a \
+	iarray_bytes.o iarray_cat.o iarray_chop.o iarray_copy.o \
+	iarray_free.o iarray_index.o iarray_init.o iarray_insert.o \
+	iarray_node.o iarray_remove.o iarray_size.o iarray_sort.o \
+	iarray_trunc.o iarray_zero.o inst-check inst-check.o inst-copy \
+	inst-copy.o inst-dir inst-dir.o inst-link inst-link.o install_core.o \
+	install_error.o installer installer.o instchk instchk.o insthier.o \
+	int16.a int16_pack.o int16_unpack.o int32.a int32_pack.o \
+	int32_unpack.o int64.a int64_pack.o int64_unpack.o mk-ctxt mk-ctxt.o \
+	nonblock.a nonblock.o open.a open_append.o open_creat.o open_excl.o \
+	open_ro.o 
+	rm -f open_rw.o open_trunc.o open_wo.o sarray.a sarray_bytes.o \
+	sarray_cat.o sarray_chop.o sarray_data.o sarray_index.o \
+	sarray_init.o sarray_size.o sarray_trunc.o scan.a scan_charset.o \
+	scan_double.o scan_f32.o scan_f64.o scan_float.o scan_fspec.a \
+	scan_ncharset.o scan_newline.o scan_space.o scan_spec.a scan_u32.o \
+	scan_u32o.o scan_u32x.o scan_u64.o scan_u64o.o scan_u64x.o \
+	scan_uchar.o scan_ucharb.o scan_ucharo.o scan_ucharx.o scan_uint.o \
+	scan_uintb.o scan_uinto.o scan_uintx.o scan_ullong.o scan_ullongb.o \
+	scan_ullongo.o scan_ullongx.o scan_ulong.o scan_ulongb.o \
+	scan_ulongo.o scan_ulongx.o scan_ushort.o scan_ushortb.o \
+	scan_ushorto.o scan_ushortx.o sgetline.a sgetline.o sgetline_chop.o \
+	sgetline_get.o sig.a sig.o sig_block.o sig_catch.o sig_pause.o \
+	squeue.a squeue_bytes.o squeue_data.o squeue_deq.o squeue_enq.o \
+	squeue_init.o 
+	rm -f squeue_peek.o squeue_size.o sstack.a sstack_bytes.o \
+	sstack_data.o sstack_init.o sstack_peek.o sstack_pop.o sstack_push.o \
+	sstack_size.o sstring.a sstring_0.o sstring_cat.o sstring_catb.o \
+	sstring_cats.o sstring_chop.o sstring_copy.o sstring_cpyb.o \
+	sstring_cpys.o sstring_init.o stalloc.a stalloc.o str.a str_char.o \
+	str_chr.o str_ci_diff.o str_ci_ndiff.o str_diff.o str_dup.o \
+	str_ends.o str_len.o str_ndiff.o str_rchar.o str_rchr.o str_starts.o \
+	str_tolower.o str_toupper.o syserr.a syserr_die.o syserr_init.o \
+	uint.a uint16.a uint16_pack.o uint16_unpack.o uint32.a uint32_pack.o \
+	uint32_unpack.o uint64.a uint64_pack.o uint64_unpack.o uint_pack.o \
+	uint_unpack.o 
 
 deinstall: deinstaller inst-check inst-copy inst-dir inst-link
 	./deinstaller
