@@ -3,6 +3,7 @@ array_bytes.o
 array_cat.o
 array_chop.o
 array_copy.o
+array_data.o
 array_index.o
 array_size.o
 array_trunc.o
