@@ -1,6 +1,6 @@
 #include "array.h"
 
-void *array_data(struct array *a)
+const void *array_data(const struct array *a)
 {
   return a->x;
 }
